force-app/main/default/objects/Invoices_Sales_Commission__c/Invoices_Sales_Commission__c.object-meta.xml
<CustomObject>
    <label>Invoices Sales Commission</label>
    <nameField>
        <label>Invoices Sales Commission Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Invoices Sales Commissions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>