force-app/main/default/objects/Invoices_Sales_Commission__c/fields/Managed_Services_Account__c.field-meta.xml
<CustomField>
    <fullName>Managed_Services_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Managed Services Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Invoices Sales Commissions</relationshipLabel>
    <relationshipName>Invoices_Sales_Commissions</relationshipName>
    <type>Lookup</type>
</CustomField>