force-app/main/default/objects/Invoices_Sales_Commission__c/fields/Project__c.field-meta.xml
<CustomField>
    <fullName>Project__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Project</label>
    <referenceTo>inov8__PMT_Project__c</referenceTo>
    <relationshipLabel>Invoices Sales Commissions</relationshipLabel>
    <relationshipName>Invoices_Sales_Commissions</relationshipName>
    <type>Lookup</type>
</CustomField>