force-app/main/default/objects/Invoices_Sales_Commission__c/fields/Sales_Person__c.field-meta.xml
<CustomField>
    <fullName>Sales_Person__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sales Person</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Invoices_Sales_Commissions</relationshipName>
    <type>Lookup</type>
</CustomField>