force-app/main/default/objects/Invoices_Sales_Commission__c/fields/User_Sales_Commission__c.field-meta.xml
<CustomField>
    <fullName>User_Sales_Commission__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>User Sales Commission</label>
    <referenceTo>User_Sales_Commission__c</referenceTo>
    <relationshipLabel>Invoices Sales Commissions</relationshipLabel>
    <relationshipName>Invoices_Sales_Commissions</relationshipName>
    <type>Lookup</type>
</CustomField>