force-app/main/default/objects/Invoices_Sales_Commission__c/validationRules/Account_or_Project_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Account_or_Project_Required</fullName>
    <active>true</active>
    <errorConditionFormula>OR(	
	AND(
		(ISBLANK(Managed_Services_Account__c )),
		(ISBLANK(Project__c ))
	),
	AND(
		NOT(ISBLANK(Managed_Services_Account__c )),
		NOT(ISBLANK(Project__c ))
	)
)</errorConditionFormula>
    <errorMessage>Account or Project is required, but not both at the same time</errorMessage>
</ValidationRule>